modules/core/main/default/objects/ContractLineItem/fields/AutoGenerateWO__c.field-meta.xml
<CustomField>
    <fullName>AutoGenerateWO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-generate work orders?</label>
    <type>Checkbox</type>
</CustomField>