modules/core/main/default/objects/ContractLineItem/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency of WO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAILY</fullName>
                <default>true</default>
                <label>DAILY</label>
            </value>
            <value>
                <fullName>WEEKLY</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
            <value>
                <fullName>YEARLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>