modules/core/main/default/objects/ContractLineItem/fields/GenerateMaintenancePlan__c.field-meta.xml
<CustomField>
    <fullName>GenerateMaintenancePlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Maintenance Plan?</label>
    <type>Checkbox</type>
</CustomField>