modules/core/main/default/objects/ContractLineItem/fields/GenerationHorizon__c.field-meta.xml
<CustomField>
    <fullName>GenerationHorizon__c</fullName>
    <label>Generation Horizon (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>