modules/core/main/default/objects/ContractLineItem/fields/GenerationTimeframe__c.field-meta.xml
<CustomField>
    <fullName>GenerationTimeframe__c</fullName>
    <label>Generation Timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>