modules/core/main/default/objects/ContractLineItem/fields/GenerationTimeframeType__c.field-meta.xml
<CustomField>
    <fullName>GenerationTimeframeType__c</fullName>
    <label>Generation Timeframe Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
                <default>true</default>
                <label>Months</label>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>