modules/core/main/default/objects/ContractLineItem/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <label>Initial Start Date</label>
    <type>Date</type>
</CustomField>