modules/core/main/default/objects/ContractLineItem/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval of WO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>