modules/core/main/default/objects/ContractLineItem/fields/WTDurationType__c.field-meta.xml
<CustomField>
    <fullName>WTDurationType__c</fullName>
    <label>Work Type Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>