modules/core/main/default/objects/ContractLineItem/fields/WTEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>WTEstimatedDuration__c</fullName>
    <label>Work Type Estimated Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>